Fixed UICooldown.z not going to 100% & Added background to ui bars
Also edited gitignore so people dont accidently upload the project
screenshot

--- a/.gitignore
+++ b/.gitignore
@@ -255,6 +255,9 @@ paket-files/
 .idea/
 *.sln.iml
 
+# Stop Sage from uploading ProjectScreenshot.png
+ProjectScreenshot.png
+
 # Important Gitignore Stuff -Matt
 *.hkgbrnd
 *.gitignore
