--- a/.gitignore
+++ b/.gitignore
@@ -256,8 +256,8 @@ paket-files/
 *.sln.iml
 
 # Stop Sage from uploading ProjectScreenshot.png
-Project/**/EditorContent/*
+Project/The Sparce/EditorContent/ProjectScreenshot.png
 
 # Important Gitignore Stuff -Matt
 *.hkgbrnd
-.gitignore
+#.gitignore
